inou/prp/tests/errors/typecheck_decl_init.prp
/*
:name: typecheck_decl_init
:type: error
:error: cannot initialize
:help: no implicit conversion
*/

// A typed variable declaration's literal initializer must match its declared
// scalar type: `c` is declared `bool`, so the integer initializer `10` is a
// type error (bool/int/string are distinct, no implicit conversion). This is
// the same check as a function parameter `comb f(c:bool = 10)`.

mut c:bool = 10   // locate_error_here
